tests/NormalTests/paczka1/fuzzy1/45665993.err
Error in line 1: nhp77qhHciN A382 19,9
Error in line 4: nhp77qhHciN A408 89,0
Error in line 3: Dbzc04 S959 67,2
Error in line 8: Dbzc04 A382 79,3
Error in line 27: yM6mivTHK45 A381 93,2
